# habitloom

./: CMakeLists.txt  README.md  build.bat
data/: config.json  habits.json
resources/: habitloom.qrc
resources/styles/: kantian.qss  minimalis_palsu.qss  nietzschean_rage.qss
src/: main.cpp
src/HabitLoom/: ConfigManager.cpp  ConfigManager.h  HabitTracker.cpp  HabitTracker.h  NotificationSystem.cpp  NotificationSystem.h  SarcasmEngine.cpp  SarcasmEngine.h  ThemeManager.cpp  ThemeManager.h
src/UI/: AddHabitDialog.cpp  AddHabitDialog.h  MainWindow.cpp  MainWindow.h
